welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^