welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
  val n = nums.length
  var vu1 = nums(0)
  var vu2 = nums(1)
}